cg:新增JVM为什么只能指针压缩只能到达32G